<resources>

    <string name="app_name">RetoAndroid</string>

    <!-- Text title -->
    <string name="product_title_text">Productos</string>
    <string name="consult_title_text">Consultas</string>
    <string name="operation_title_text">Operaciones</string>

    <!-- Text title -->
    <string name="count_soles_text">Cuenta soles</string>
    <string name="count_dollar_text">Cuenta dolares</string>
    <string name="symbol_soles_text">S/</string>
    <string name="symbol_dollar_text">US$</string>
    <string name="number_account_text">Número de cuenta</string>
    <string name="discount_minor_text">-</string>
    <string name="discount_more_text">+</string>
    <string name="motion_text">Movimientos</string>

    <!-- Text Hint -->
    <string name="document_hint">DNI</string>
    <string name="password_hint">Contraseña</string>

    <!-- Text Button -->
    <string name="get_into_text_button">Ingresar</string>
    <string name="accept_text_button">Aceptar</string>
    <string name="copy_text_button">Copiar</string>

    <!-- Text Message -->
    <string name="message_login_verify_user">Usuario y/o contraseña incorrectos</string>
    <string name="copy_account_number_message">Se copio el numero de cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>