<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <data>

        <variable
            name="loginViewModel"
            type="com.leandro1995.retoandroid.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginStart="@dimen/dimen_15"
            android:layout_marginTop="@dimen/dimen_15"
            android:layout_marginEnd="@dimen/dimen_15"
            android:layout_marginBottom="@dimen/dimen_15"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img_logo"
                tools:ignore="ContentDescription" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:ems="10"
                android:hint="@string/document_hint"
                android:inputType="number"
                android:text="@={loginViewModel.user.document}"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="@={loginViewModel.user.password}"
                tools:ignore="Autofill,LabelFor" />

            <Button
                style="@style/Button"
                android:layout_marginTop="@dimen/dimen_10"
                android:onClick="@{()-> loginViewModel.onClick.invoke(loginViewModel.LOGIN)}"
                android:text="@string/get_into_text_button" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>