<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.DetailProductActivity">

    <data>

        <variable
            name="detailProductViewModel"
            type="com.leandro1995.retoandroid.viewmodel.DetailProductViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/includeAppBar"
            layout="@layout/include_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginStart="@dimen/dimen_0"
            android:layout_marginEnd="@dimen/dimen_0"
            android:layout_marginBottom="@dimen/dimen_0"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/includeAppBar">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_150"
                app:cardCornerRadius="@dimen/dimen_5"
                app:cardElevation="@dimen/dimen_5"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:orientation="horizontal"
                        tools:ignore="DisableBaselineAlignment,RtlHardcoded">

                        <LinearLayout
                            android:layout_width="@dimen/dimen_0"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/dimen_50"
                                android:layout_height="@dimen/dimen_50"
                                app:srcCompat="@drawable/img_logo"
                                tools:ignore="ContentDescription" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="@dimen/dimen_0"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/accountText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/amountText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_20"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_marginEnd="@dimen/dimen_20"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="@dimen/dimen_0"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/number_account_text" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{detailProductViewModel.product.accountNumber}" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="@dimen/dimen_0"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <Button
                                style="@style/ButtonRounded"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="@{()->detailProductViewModel.onClick.invoke(detailProductViewModel.COPY)}"
                                android:text="@string/copy_text_button" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar3"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/motionProductLinear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/Body3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_5"
                        android:layout_marginEnd="@dimen/dimen_5"
                        android:text="@string/motion_text" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/movementProductRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dimen_5"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_marginEnd="@dimen/dimen_5"
                        android:layout_marginBottom="@dimen/dimen_5" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>